--- a/desafios/index.html
+++ b/desafios/index.html
@@ -97,7 +97,7 @@
         </p>
     </section>
     <footer>
-        <p>Site criado por <a href="#">Gustavo Guanabara</a> para o <a href="#">CursoemVideo</a></p>
+        <p>Site criado por <a href="#">Geovanne Rodrigues Pinheiro</a>.
     </footer>
 </body>
 </html>
