--- a/projetos/teste_AED2/index.html
+++ b/projetos/teste_AED2/index.html
@@ -8,35 +8,37 @@
 </head>
 <body>
     <h1>Funções</h1>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(1)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(2)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(3)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(4)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(5)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(6)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(7)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(8)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(9)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes">
-        <h2>Teste</h2>
+    <div class="funcoes" onclick="vira_seta(10)">
+        <span class="seta">></span><h2>Teste</h2>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
