--- a/projetos/teste_AED2/index.html
+++ b/projetos/teste_AED2/index.html
@@ -8,34 +8,34 @@
 </head>
 <body>
     <h1>Funções</h1>
-    <div class="funcoes" onclick="vira_seta(1)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(2)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(3)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(4)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(5)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(6)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(7)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(8)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(9)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
-    <div class="funcoes" onclick="vira_seta(10)">
+    <div class="funcoes" onclick="vira_seta(this)">
         <span class="seta">></span><h2>Teste</h2>
     </div>
 
