--- a/projetos/teste_AED2/index.html
+++ b/projetos/teste_AED2/index.html
@@ -8,35 +8,102 @@
 </head>
 <body>
     <h1>Funções</h1>
-    <div class="funcoes" onclick="vira_seta(this)">
-        <span class="seta">></span><h2>Teste</h2>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao"><span class="seta">></span><h2>Teste</h2></div>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
-        <span class="seta">></span><h2>Teste</h2>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao"><span class="seta">></span><h2>Teste</h2></div>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
-        <span class="seta">></span><h2>Teste</h2>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao"><span class="seta">></span><h2>Teste</h2></div>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
-        <span class="seta">></span><h2>Teste</h2>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao"><span class="seta">></span><h2>Teste</h2></div>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
+    <div class="funcoes" onclick="ativar_funcao(this)">
         <span class="seta">></span><h2>Teste</h2>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
+    <div class="funcoes" onclick="ativar_funcao(this)">
         <span class="seta">></span><h2>Teste</h2>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
+    <div class="funcoes" onclick="ativar_funcao(this)">
         <span class="seta">></span><h2>Teste</h2>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
-        <span class="seta">></span><h2>Teste</h2>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao"><span class="seta">></span><h2>Teste</h2></div>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
-        <span class="seta">></span><h2>Teste</h2>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao"><span class="seta">></span><h2>Teste</h2></div>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
-    <div class="funcoes" onclick="vira_seta(this)">
-        <span class="seta">></span><h2>Teste</h2>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao"><span class="seta">></span><h2>Teste</h2></div>
+        <div class="oculto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est ducimus suscipit velit eaque atque
+                facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati laborum quas nulla corrupti temporibus
+                labore. Rerum quo iusto labore ducimus consequuntur cum sequi obcaecati fugit aliquam deleniti. Atque temporibus
+                vitae tenetur vel?
+            </p>
+        </div>
     </div>
 
     <script src="script.js"></script>
