--- a/projetos/teste_AED2/index.html
+++ b/projetos/teste_AED2/index.html
@@ -25,6 +25,204 @@
             <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
         </div>
     </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
+    <div class="funcoes" onclick="ativar_funcao(this)">
+        <div class="cabecalho-funcao">
+            <span class="seta">></span>
+            <h2 class="tfuncao">Função<span>(</span><span class="tparametros">num, arvB</span><span>);</span></h2>
+        </div>
+        <div class="oculto">
+            <p class="tdocumentacao">/*Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga soluta quae sint est
+                ducimus suscipit velit eaque atque facere autem reiciendis, sequi voluptates quasi dolor aliquid obcaecati
+                laborum quas nulla corrupti temporibus labore. Rerum quo iusto labore ducimus consequuntur cum sequi
+                obcaecati fugit aliquam deleniti. Atque temporibus vitae tenetur vel?
+                */</p>
+            <br>
+            <p class="tdocumentacao">//Corpo da função:</p>
+            <br>
+            <div class="corpo-funcao">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, similique provident iste nulla, nam
+                inventore maiores dolorem non modi veritatis rem fuga quae? Et doloremque molestiae ullam maiores voluptas
+                velit.
+            </div>
+            <div class="container-run"><button><i class='bx bx-play'>Run</i></button></div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
