inserção dos inputs

--- a/VagasOnline/login.html
+++ b/VagasOnline/login.html
@@ -8,9 +8,24 @@
 </head>
 <body>
     <div class="container">
-        <h1>
-            
-        </h1>
+        <h1>Login</h1>
+        <div class="box-escolhas">
+            <div class="box-min-escolhas">
+                <p>Empresa</p>
+                <input type="radio">
+            </div>
+            <div class="box-min-escolhas">
+                <p>Candidato</p>
+                <input type="radio">
+            </div>
+        </div>
+        <div class="box-inputs">
+            <p>Usuário</p>
+            <input type="text">
+            <p>Senha</p>
+            <input type="password">
+        </div>
+        <p>Não tem conta? <a href="#">Cadastre-se</a></p>
     </div>
 </body>
 </html>
