atualização de design 1

--- a/VagasOnline/login.html
+++ b/VagasOnline/login.html
@@ -11,19 +11,20 @@
         <h1>Login</h1>
         <div class="box-escolhas">
             <div class="box-min-escolhas">
-                <p>Empresa</p>
                 <input type="radio">
+                <p>Empresa</p>
+                
             </div>
             <div class="box-min-escolhas">
-                <p>Candidato</p>
                 <input type="radio">
+                <p>Candidato</p>
             </div>
         </div>
         <div class="box-inputs">
             <p>Usuário</p>
-            <input type="text">
+            <input type="text" placeholder="Escreva seu usuário">
             <p>Senha</p>
-            <input type="password">
+            <input type="password" placeholder="Escreva sua senha">
         </div>
         <p>Não tem conta? <a href="#">Cadastre-se</a></p>
     </div>
