--- a/VagasOnline/login.html
+++ b/VagasOnline/login.html
@@ -12,8 +12,7 @@
         <div class="box-escolhas">
             <div class="box-min-escolhas">
                 <input type="radio">
-                <p>Empresa</p>
-                
+                <p>Empresa</p> 
             </div>
             <div class="box-min-escolhas">
                 <input type="radio">
@@ -26,6 +25,8 @@
             <p>Senha</p>
             <input type="password" placeholder="Escreva sua senha">
         </div>
+        <button>Entrar</button>
+        <p>Ou entre usando</p>
         <p>Não tem conta? <a href="#">Cadastre-se</a></p>
     </div>
 </body>
