atualização de design 3

--- a/VagasOnline/login.html
+++ b/VagasOnline/login.html
@@ -11,11 +11,11 @@
         <h1>Login</h1>
         <div class="box-escolhas">
             <div class="box-min-escolhas">
-                <input type="radio">
+                <input type="radio" name="alternate">
                 <p>Empresa</p> 
             </div>
             <div class="box-min-escolhas">
-                <input type="radio">
+                <input type="radio" name="alternate">
                 <p>Candidato</p>
             </div>
         </div>
