atualização de design 4

--- a/VagasOnline/login.html
+++ b/VagasOnline/login.html
@@ -19,14 +19,13 @@
                 <p>Candidato</p>
             </div>
         </div>
-        <div class="box-inputs">
+        <form class="box-inputs" method="post">
             <p>Usuário</p>
-            <input type="text" placeholder="Escreva seu usuário">
+            <input type="text" placeholder="Escreva seu usuário" >
             <p>Senha</p>
             <input type="password" placeholder="Escreva sua senha">
-        </div>
+        </form>
         <button>Entrar</button>
-        <p>Ou entre usando</p>
         <p>Não tem conta? <a href="#">Cadastre-se</a></p>
     </div>
 </body>
