atualização de design 5

--- a/VagasOnline/login.html
+++ b/VagasOnline/login.html
@@ -12,16 +12,16 @@
         <div class="box-escolhas">
             <div class="box-min-escolhas">
                 <input type="radio" name="alternate">
-                <p>Empresa</p> 
+                <p>Candidato</p>
             </div>
             <div class="box-min-escolhas">
                 <input type="radio" name="alternate">
-                <p>Candidato</p>
+                <p>Empresa</p>
             </div>
         </div>
-        <form class="box-inputs" method="post">
+        <form class="box-inputs" method="post" action="http://127.0.0.1:8080/cadastro">
             <p>Usuário</p>
-            <input type="text" placeholder="Escreva seu usuário" >
+            <input type="text" placeholder="Escreva seu usuário">
             <p>Senha</p>
             <input type="password" placeholder="Escreva sua senha">
         </form>
