--- a/VagasOnline/login.html
+++ b/VagasOnline/login.html
@@ -24,7 +24,7 @@
             <input type="text" placeholder="Escreva seu usuário">
             <p>Senha</p>
             <input type="password" placeholder="Escreva sua senha">
-            <button>Entrar</button>
+            <button type="submit">Entrar</button>
         </form>
         <p>Não tem conta? <a href="#">Cadastre-se</a></p>
     </div>
