--- a/VagasOnline/index.html
+++ b/VagasOnline/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
+    
     <header>
         <h1>Vagas Online</h1>
-        <a href="#">Cadastrar CV</a>
+        <div class="botoes-header">
+            <a href="https://geovanne19.github.io/HTML-e-CSS/VagasOnline/login.html">Entrar</a>
+            <a href="#">Cadastre-se</a>
+        </div>
     </header>
     <section class="pesquisa">
         <h2>Encontre o seu emprego dos sonhos</h2>
@@ -20,11 +26,16 @@
             </div>
             <button>ACHAR VAGAS</button>
         </div>
-        <svg class="wave-border" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#626CDE" fill-opacity="1"
-                d="M0,128L120,149.3C240,171,480,213,720,213.3C960,213,1200,171,1320,149.3L1440,128L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z">
-            </path>
-        </svg>
     </section>
+    <div class="filtros">
+        <button><i class='bx bx-accessibility'></i>Vagas para PCD</button>
+        <button><i class='bx bxs-devices'></i>Vagas de Tecnologia</button>
+        <button><i class='bx bx-rocket'></i>Estágio e Trainee</button>
+    </div>
+
+    <main>
+
+    </main>
+
 </body>
 </html>
