--- a/VagasOnline/index.html
+++ b/VagasOnline/index.html
@@ -34,7 +34,36 @@
     </div>
 
     <main>
-
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
+        <div class="vaga"></div>
     </main>
 
 </body>
