--- a/VagasOnline/login/login.html
+++ b/VagasOnline/login/login.html
@@ -26,7 +26,7 @@
             <input type="password" placeholder="Escreva sua senha">
             <button type="submit">Entrar</button>
         </form>
-        <p>Não tem conta? <a href="#">Cadastre-se</a></p>
+        <p>Não tem conta? <a href="https://geovanne19.github.io/HTML-e-CSS/VagasOnline/cadastro.html">Cadastre-se</a></p>
     </div>
 </body>
 </html>
