--- a/VagasOnline/cadastro/cadastro.html
+++ b/VagasOnline/cadastro/cadastro.html
@@ -9,6 +9,10 @@
 <body>
     <main>
         <h1>Criar uma conta</h1>
+        <div class="tab-buttons">
+            <button class="tab-btn" content-id="candidato">Candidato</button>
+        </div> 
     </main>
+    <script src="cadastro.js"></script>
 </body>
 </html>
