--- a/VagasOnline/cadastro/cadastro.html
+++ b/VagasOnline/cadastro/cadastro.html
@@ -10,8 +10,17 @@
     <main>
         <h1>Criar uma conta</h1>
         <div class="tab-buttons">
-            <button class="tab-btn" content-id="candidato">Candidato</button>
+            <button class="tab-btn active" content-id="candidato">Candidato</button>
+            <button class="tab-btn" content-id="empresa">Empresa</button>
         </div> 
+        <div class="tab-contents">
+            <form class="content show" id="candidato">
+                candidato
+            </form>
+            <form class="content" id="empresa">
+                empresa
+            </form>
+        </div>
     </main>
     <script src="cadastro.js"></script>
 </body>
